[components] fix action and close bleed

--- a/packages/@sanity/components/src/snackbar/styles/SnackbarItem.css
+++ b/packages/@sanity/components/src/snackbar/styles/SnackbarItem.css
@@ -21,7 +21,6 @@
 .inner {
   position: relative;
   display: flex;
-  align-items: stretch;
   border-radius: var(--border-radius-large);
   composes: shadow-1dp from "part:@sanity/base/theme/shadows-style";
   line-height: 1.3125;
@@ -71,9 +70,7 @@
 
 .buttonContainer {
   display: flex;
-  align-items: center;
-  align-self: flex-start;
-  max-height: calc(var(--font-size-large) + 5px);
+  max-height: 3.5rem;
 
   @media (hover: hover) {
     opacity: 0.7;
@@ -86,13 +83,19 @@
 
 .actionButtonContainer {
   composes: buttonContainer;
-  margin: var(--medium-padding) var(--small-padding);
 }
 
 .closeButtonContainer {
   composes: buttonContainer;
   font-size: calc(var(--font-size-large) + 5px);
-  margin: calc(var(--medium-padding) - 2px);
+}
+
+.actionButtonContainer [class*=inner] {
+  padding: var(--medium-padding) var(--small-padding);
+}
+
+.closeButtonContainer [class*=inner] {
+  padding: calc(var(--medium-padding) - 2px);
 }
 
 .icon ~ .content {
